fix title overflow style

--- a/week1/project/ecommerce/src/App.css
+++ b/week1/project/ecommerce/src/App.css
@@ -18,7 +18,6 @@
 .categories {
   display: flex;
 }
-
 .categories--item {
   background-color: #efeff0;
   cursor: pointer;
@@ -26,12 +25,18 @@
   margin: 2px;
   padding: 12px;
   font-size: 16px;
+  
 }
-
 .categories--item-selected {
   background-color: #bdbdc1;
 }
 
+.product--title--div{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 300px;
+}
 .product--title {
   padding-top: 8px;
   font-size: 12px;
@@ -43,7 +48,6 @@
   height: 200px;
   width: 90%;
 }
-
 img {
   height: 100%;
   width: 80%;
